Bug #1250, Embed code field too small + not all is copied,
* Increased size in core player styles,
* Re-worked 'embedCode' function in Javascript behaviors - fix onclick bugs in MSIE and Safari/Webkit,
* Todo: fix on-focus bug in Webkit.

--- a/application/assets/ouplayer/ouice-light/ouice-light.css
+++ b/application/assets/ouplayer/ouice-light/ouice-light.css
@@ -161,8 +161,8 @@ body,input{text-shadow:1px 1px 0 #fff; color:#183843; /*D. tourquoise*/}
   text-decoration:none;
   border-bottom:1px solid transparent;
 }
-.oup-settings.panel a:hover{
-  background:#fbfbfb;
+.oup-settings.panel a:hover, .oup-settings.panel textarea:hover, .oup-settings.panel :focus{
+  background-color:#fbfbfb;
   color:#183843;
   border-bottom:1px solid #888;
 }
